--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
+<h1 style="text-align: center;">BARCODE SCANNER APP</h1>
 <canvas id="canvas" height="240" width="320"></canvas>
 <div id="barcodes"></div>
