--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-<h1 style="text-align: center;">BARCODE SCANNER APP</h1>
-<canvas id="canvas" height="240" width="320"></canvas>
-<div id="barcodes"></div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>BARCODE SCANNER APP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+  <h1 style="text-align: center;">BARCODE SCANNER APP</h1>
+  <canvas id="canvas" height="240" width="320"></canvas>
+  <div id="barcodes"></div>
+  <script src="./index.js" async></script>
+</body>
+
+</html>
