install button created

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+  <button class="installApp">Install</button>
+
   <h1 style="text-align: center;">BARCODE SCANNER APP</h1>
   <canvas id="canvas" height="240" width="320"></canvas>
   <div id="barcodes"></div>
