--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>BARCODE SCANNER APP</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="manifest" href="manifest.json">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="manifest" href="manifest.json" />
   <link rel="icon" type="image/x-icon" href="icon.png" />
+  <link rel="canonical" href="https://edu-dev-silicontechlab.github.io/barcode_scanner/" />
+
 </head>
 
 <body>
-  <button class="installApp">Install</button>
-
-  <h1 style="text-align: center;">BARCODE SCANNER APP</h1>
+  <h1 style="text-align: center">BARCODE SCANNER APP v1</h1>
   <canvas id="canvas" height="240" width="320"></canvas>
   <div id="barcodes"></div>
+  <button class="installApp">Install</button>
   <script src="./index.js" async></script>
 </body>
 
